tests/snapshots/parser__decode_osm_pbf_files@libosmium__examples_t_pub_names_pub-way-gen.osm.pbf.snap
---
source: tests/parser.rs
expression: result
input_file: tests/fixtures/libosmium/examples_t_pub_names_pub-way-gen.osm.pbf
---
[
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Skip,
    Create {
        elem: Way,
        id: 40948654,
        ts: 1253179661000,
        val: indoc! {r#"
            osmt:name "Vereinsheim";
            osmt:amenity "pub";
            osmt:building "yes";
            osmm:type "w";
            osmm:version "2"^^xsd:integer;
            osmm:user "42429";
            osmm:timestamp "2009-09-17 09:27:41 UTC"^^xsd:dateTime;
            osmm:changeset "2509937"^^xsd:integer.
            osmm:isClosed "true"^^xsd:boolean;
            osmm:loc "Point(53.565617582558474 8.572921719668862)"^^geo:wktLiteral;
        "}#",
    },
]
